--- a/animation.css
+++ b/animation.css
@@ -24,11 +24,13 @@ ul {
 
 }
 ul li {
+  text-align: center;
+  width: 200px;
   display: inline-block;
   font-size: 25px;
   margin-right: -4px;
   position: relative;
-  padding: 15px 30px 15px 30px;
+  padding: 15px 60px 15px 60px;
   background-color: transparent;
   color:white;
   border: 1px solid white;
@@ -62,10 +64,10 @@ ul li ul {
   -transition: opacity 0.2s;
 }
 ul li ul li { 
+  width: 100%;
   background: transparent; 
   display: block; 
   color: white;
-  text-shadow: 0 -1px 0 #000;
 }
 ul li ul li:hover { 
   background-color: rgba(255,255,255, 0.5);
